CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(scpip Fortran)

SET(SCPIP_SRCS Scpip30.f Sparsecz.f scpblas.f scpdummy.f)

SET(SCPIP_LIBNAME scpip)

IF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(SCPIP_LIBNAME scpip)
ENDIF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")

ADD_LIBRARY(${SCPIP_LIBNAME} STATIC ${SCPIP_SRCS})

# ADD_EXECUTABLE(v30main v30main.f)

# TARGET_LINK_LIBRARIES(v30main scpip)

INSTALL(TARGETS ${SCPIP_LIBNAME} ARCHIVE DESTINATION "${LIB_SUFFIX}")

